--- a/index.html
+++ b/index.html
@@ -44,11 +44,8 @@
             text-align: center;
         }
         .logo {
-            width: 200px;
+            width: 300px;
             height: auto;
-        }
-        .title {
-            color: red;
         }
         .contact {
             margin-top: 20px;
@@ -58,15 +55,12 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </div>
     <div class="container">
-        <img src="logo.png" alt="Wern & Whit Logo" class="logo">
-        <h1 class="text-4xl font-bold uppercase title">WERN & WHIT</h1>
-        <p class="contact">Contact us: <a href="mailto:johnathan@wernandwhit.com">johnathan@wernandwhit.com</a></p>
+        <img src="assets/images/logo.svg" alt="Wern & Whit Logo" class="logo">
     </div>
 </body>
 </html>
-
