--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div id="about" class="content-section">
             <h1>About Wern & Whit</h1>
-            <p>Wern & Whit is a progressive design firm focused on sustainability and innovation. We challenge outdated industries, pioneering eco-friendly solutions to drive meaningful change.</p>
+            <p>Wern & Whit is a forward-thinking design firm dedicated to shaping a greener future. Our mission is to revolutionize industries that have been slow to adapt to modern sustainability standards, pioneering innovative design solutions in overlooked sectors.</p>
         </div>
         <div id="contact" class="content-section">
             <h1>Contact Us</h1>
