--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             text-align: center;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .sidebar {
             position: fixed;
@@ -44,7 +47,7 @@
             cursor: pointer;
         }
         .sidebar a i {
-            margin-right: 15px;
+            margin-right: 8px;
         }
         .sidebar a:hover {
             background: rgba(255, 255, 255, 0.2);
@@ -54,9 +57,10 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            flex: 1;
             margin-left: 250px;
             text-align: center;
+            padding-bottom: 60px;
         }
         .logo-top {
             width: 100%;
@@ -100,28 +104,30 @@
                 bottom: 0;
                 left: 0;
                 width: 100%;
-                height: auto;
+                height: 60px;
                 flex-direction: row;
                 justify-content: space-around;
+                align-items: center;
                 padding: 10px 0;
             }
             .sidebar img {
-                width: 50px;
+                width: 40px;
                 margin-bottom: 0;
-                margin-right: 10px;
             }
             .sidebar a {
                 flex-direction: column;
                 align-items: center;
                 padding: 5px;
                 text-align: center;
+                font-size: 12px;
             }
             .sidebar a i {
                 margin-right: 0;
-                margin-bottom: 5px;
+                margin-bottom: 3px;
             }
             .container {
                 margin-left: 0;
+                padding-bottom: 80px;
             }
         }
     </style>
@@ -137,9 +143,9 @@
 <body>
     <div class="sidebar">
         <img src="assets/images/logo_red.ico" alt="Small Logo">
-        <a onclick="showSection('home')"><i class="fas fa-home"></i><span>Home</span></a>
-        <a onclick="showSection('about')"><i class="fas fa-info-circle"></i><span>About</span></a>
-        <a onclick="showSection('contact')"><i class="fas fa-envelope"></i><span>Contact</span></a>
+        <a onclick="showSection('home')"><i class="fas fa-home"></i> <span>Home</span></a>
+        <a onclick="showSection('about')"><i class="fas fa-info-circle"></i> <span>About</span></a>
+        <a onclick="showSection('contact')"><i class="fas fa-envelope"></i> <span>Contact</span></a>
     </div>
     <div class="container">
         <div id="home" class="content-section">
